--- a/.github/workflows/main_shuiipredictschurn.yml
+++ b/.github/workflows/main_shuiipredictschurn.yml
@@ -35,7 +35,7 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt -t
+        run: pip install -r requirements.txt -t .
 
       # Optional: Add step to run tests here
 
